--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -24,7 +24,7 @@
         <div class="header-container">
             <header>
                 <nav>
-                    <a href="/services.html">Services</a>
+                    <a href="/great-idea/services.html">Services</a>
                     <a href="#">Product</a>
                     <a href="#">Vision</a>
                     <a href="#">Features</a>
